# artdep

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .gitignore  README.md  dynamic_versioning.ini  genindex.html  index.html  matmacore.html  matmacore.mol.html  matmacore.plot.html  matmacore.utilities.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  reaction_profiles.ipynb  requirements.txt  search.html  searchindex.js  setup.py  version.info
.doctrees/: environment.pickle  index.doctree  matmacore.doctree  matmacore.mol.doctree  matmacore.plot.doctree  matmacore.utilities.doctree  modules.doctree
.github/workflows/: bumpversion.yml  docs.yml  documentation  python-publish.yml
MM-Util/: mol.py  plot.py  test_mol.py  utilities.py
MMUtil/: mol.py  utilities.py
MM_Util/: __init__.py  mol.py  plot.py  utilities.py
MM_Util/docs/: MM_Util.rst  conf.py  index.rst  modules.rst
MatmaCore/: mol.py  plot.py  utilities.py
_build/: genindex.html  index.html  matmacore.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_sources/: index.rst.txt  matmacore.mol.rst.txt  matmacore.plot.rst.txt  matmacore.utilities.rst.txt  modules.rst.txt
benchmarks/: contour.ipynb  example.ipynb  foo_plots.ipynb  gaussian.ipynb  multi_reaction.ipynb  rdf.ipynb  reaction_profiles.ipynb  ring_puckers_hist.ipynb  scatterplot.ipynb  trajectories.ipynb  trajectories_CP2K_Gromacs.ipynb
docs/: conf.py  index.rst
docs/source/: conf.py  (+3 more)
matmacore/: mol.py  plot.py
(+124 files in other folders)
