[build-system]
requires = ["setuptools", "dynamic-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "matmacore"
authors = [
    {name = "marianski-lab", email = "mmarians@hunter.cuny.edu"}
]
readme = "README.md"
license = {text = "GPLv3"}
dependencies = [
        "numpy",
        "matplotlib",
        "colormaps",
        "networkx"
    ]
requires-python = ">= 3.12"
dynamic = ["version"]